raw/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: histdata
  labels:
    app.kubernetes.io/part-of: histdata
