raw/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: histdata-app
  namespace: histdata
spec:
  type: ClusterIP
  selector:
    app: histdata-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
